--- a/src/pages/Install/Desktop.module.css
+++ b/src/pages/Install/Desktop.module.css
@@ -23,6 +23,9 @@
   margin-bottom: 0;
   margin-top: 0;
 }
+.p.dark {
+  color: white
+}
 
 .left {
   text-align: left;
@@ -38,6 +41,9 @@
   border-radius: 0 10px 10px 0;
   transition: all 0.2s;
 }
+.sliderDescription.dark span {
+  color: #ffffff;
+}
 
 /* Активное состояние */
 .sliderDescription.active {
@@ -50,6 +56,11 @@
 /* Наведение */
 .sliderDescription:hover {
   transition: all 0.2s;
+}
+
+.sliderDescription.dark:hover span {
+  color: #FFA046;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
 }
 .sliderDescription:hover span {
   color: #000000;
